pulled in expectAssertion implementation from ember-dev

--- a/spec/index.html
+++ b/spec/index.html
@@ -19,6 +19,7 @@
 
   <!-- Specs -->
   <script src="spec_helper.js"></script>
+  <script src="expect_assertion.js"></script>
   <script src="adapter_spec.js"></script>
   <script src="helpers_spec.js"></script>
 
