--- a/spec/index.html
+++ b/spec/index.html
@@ -9,9 +9,10 @@
   <script src="../vendor/jquery-2.0.3.js"></script>
   <script src="../vendor/jasmine-1.3.0/jasmine.js"></script>
   <script src="../vendor/jasmine-1.3.0/jasmine-html.js"></script>
-  <script src="../vendor/handlebars-1.0.0.js"></script>
-  <script src="../vendor/ember.js"></script>
-  <script src="../vendor/ember-data-1.0.0.beta.3.js"></script>
+
+  <script src="http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-v1.3.0.js"></script>
+  <script src="http://builds.emberjs.com/release/ember.js"></script>
+  <script src="http://builds.emberjs.com/beta/ember-data.js"></script>
   <script src="../vendor/underscore.js"></script>
 
   <!-- Jasmine Ember Testing files -->
